# YourDataVisualised

./: .gitignore  README.md  eslint.config.mjs  functions.py  index.html  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: dev-checks.yml
amazon/: README.md
apple/: README.md
google/: README.md  functions.py
meta/: README.md
netflix/: README.md  streamlit_practice.py
src/: App.tsx
src/__tests__/: App.test.tsx
twitter/: README.md
